# Sharpe

./: .gitignore  ARCHITECTURE.md  Anchor.toml  README.md
app/: .env.example  README.md  docs.html  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
app/src/: App.tsx  config.ts  index.css  main.tsx  polyfills.ts
app/src/chain/: actions.ts  program.ts
app/src/chain/idl/: clv.json  clv.ts
app/src/components/: DataGate.tsx  Footer.tsx  Icon.tsx  LogoMark.tsx  Nav.tsx  OddsChart.tsx  ScrollToTop.tsx  Skeleton.tsx  Ticket.tsx  VerifyModal.tsx  graphics.tsx  motion.tsx  ui.tsx
app/src/feed/: index.ts  live.ts  replay.ts
app/src/lib/: auth.ts  codec.test.ts  codec.ts  domain.test.ts  domain.ts  explorer.ts  txline.ts  wallet.ts
app/src/lib/__fixtures__/: fixture-validation.json  (+2 more)
app/src/pages/: Duels.tsx  Landing.tsx  Leaderboard.tsx  MatchDetail.tsx  Matches.tsx  Onboard.tsx  Portfolio.tsx
app/src/state/: auth.tsx  feed.tsx  fixtures.ts  providers.tsx  toast.tsx  useClv.ts
docs/: ARCHITECTURE.md  FEEDBACK.md  SUBMISSION.md  USER-FLOW.md
programs/clv/: Cargo.toml
programs/clv/idls/: txoracle.json
programs/clv/src/: constants.rs  cpi.rs  error.rs  instructions.rs  lib.rs  market.rs  state.rs
programs/clv/src/instructions/: duel.rs  initialize_config.rs  open_prediction.rs  prove_entry.rs  prove_fixture.rs  settle_close.rs  settle_outcome.rs  void_prediction.rs
programs/clv/tests/: market.rs  test_initialize.rs
scripts/: duel-e2e.ts  faucet.ts  keeper.ts  open-ranked.ts  proof-spike.ts  settle-e2e.ts  spike-phase0.ts
(+8 files in other folders)
