[package]
name = "clv"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clv"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.2"
# `token::` account constraints expand to anchor_spl::token_interface, which requires
# the token_2022 feature. Trim only what the escrow never touches (metadata, ATA,
# token-2022 extensions) to keep the .so small.
anchor-spl = { version = "1.0.2", default-features = false, features = ["token", "token_2022", "mint"] }
# anchor-lang 1.x no longer re-exports solana_program::hash.
solana-sha256-hasher = "3.1.0"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
